# banya_rest_LLM

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
banya/: model_tn.py  view_tn.py
banya_LLM/: .gitignore
