[tool.poetry]
name = "banya-rest-llm"
version = "0.1.0"
description = ""
authors = ["smkim <ksm@nxdf.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
transformers = "^4.46.1"
torch = "^2.5.1"
openai = "^1.53.0"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
